chore(test): update mockito configuration